# KelPickle

./: .gitignore  README.md  pyproject.toml  setup.cfg  sinceWeDontWantToInteractWithIssuesRightNow.txt  tox.ini
.github/workflows/: tests.yml
kelpickle/: __init__.py  _strategy_manager.py  common.py  errors.py  kelpickling.py  pickler.py  strategy_manager.py  unpickler.py
kelpickle/formatters/: base_formatter.py  json_formatter.py
kelpickle/strategies/: base_strategy.py  bytes_strategy.py  custom_strategy.py  dict_strategy.py  import_strategy.py  list_strategy.py  null_strategy.py  reduce_strategy.py  set_strategy.py  state_strategy.py  tuple_strategy.py  tzinfo_strategy.py
kelpickle/strategies/core_strategies/: dict_strategy.py  list_strategy.py  null_strategy.py
kelpickle/strategies/custom/: bytes_strategy.py  date_strategy.py  datetime_strategy.py  import_strategy.py  object_strategy.py  set_strategy.py  time_strategy.py  timedelta_strategy.py  tuple_strategy.py  tzinfo_strategy.py
kelpickle/strategies/custom_strategies/: bytes_strategy.py  custom_strategy.py  date_strategy.py  datetime_strategy.py  import_strategy.py  object_strategy.py  set_strategy.py  time_strategy.py  timedelta_strategy.py  tuple_strategy.py  tzinfo_strategy.py
kelpickle/strategies/custom_strategies/object_strategy/: __init__.py  default_pickling_utils.py  object_strategy.py
kelpickle/strategies/internal_strategies/: dict_strategy.py  internal_strategy.py  list_strategy.py  null_strategy.py
kelpickle/strategy/: base_strategy.py  bytes_strategy.py  date_strategy.py  datetime_strategy.py  default_strategy.py  dict_strategy.py  import_strategy.py  list_strategy.py  null_strategy.py  pyreduce_strategy.py  set_strategy.py  state_strategy.py  time_strategy.py  timedelta_strategy.py  tuple_strategy.py  tzinfo_strategy.py
tests/: objects_db.py  references_test.py  sanity_test.py
