[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=./kelpickle --cov-report=html:./reports/pytest"
testpaths = [
    "tests"
]

[tool.tox]
legacy_tox_ini="""
[tox]
envlist = py310, flake8, mypy
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310, mypy, flake8

[testenv]
commands =
    python -m pip install pip -U
    pip install .[dev]
    pytest


[testenv:mypy]
deps=.[dev]
commands=mypy kelpickle

[testenv:flake8]
deps=.[dev]
commands = flake8 kelpickle tests

[flake8]
max-line-length = 120
"""

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs  = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
pretty = true
show_traceback = true
raise_exceptions = true
html_report = "./reports/mypy"
junit_xml = "./reports/mypy.xml"