[project]
name = "kelpickle"
description = "TODO: Add description"
version = "0.0.1a"
requires-python = '~=3.10'
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10"
]
keywords = [
    "pickle",
    "kelp",
    "best effort"
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
github-repo = "https://github.com/UltimateLobster/KelPickle"

[[project.authors]]
name = "Nir Schulman"
email = "narsssx@gmail.com"

[[project.maintainers]]
name = "Nir Schulman"
email = "narsssx@gmail.com"

[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kelpickle"]
platforms = [
    "win32",
    "linux"
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies = {dev = {file = "requirements-dev.txt"}}



[tool.pytest.ini_options]
addopts = "--cov=./kelpickle --cov-report term-missing --cov-report=html:./reports/coverage/html_results --cov-report xml:./reports/coverage/coverage-results.xml --junitxml=./reports/test-results.xml"
testpaths = [
    "tests"
]

[tool.tox]
legacy_tox_ini="""
[tox]
envlist = py{310}-{windows,linux}-pytest,py{310}-{windows,linux}-{flake8,mypy}
isolated_build = True

[gh-actions]
python =
    3.10: py310

[gh-actions:env]
PLATFORM =
    windows-latest: windows
    ubuntu-latest: linux

[testenv]
platform =
    linux: linux
    windows: win32
allowlist_externals =
    windows: cmd
    windows: powershell
    linux: mkdir
    linux: bash
commands_pre =
    linux: mkdir -p ./reports
    windows: cmd /c if not exist .\\reports mkdir .\\reports
    python -m pip install pip -U
    pip install .[dev]

[testenv:py{310}-{windows,linux}-pytest]
commands =
    linux: bash -c "pytest . | tee ./reports/test-console-results.txt"
    windows: powershell /c "pytest | Tee-Object .\\reports\\test-console-results.txt"
    windows: python -c "file = open('./reports/test-console-results.txt', 'rb');results=file.read();file.close();file = open('./reports/test-console-results.txt', 'wb');file.write(results.replace(b'\\r\\n', b'\\n'));file.close()"


[testenv:py{310}-{windows,linux}-mypy]
commands =
    mypy kelpickle

[testenv:py{310}-{windows,linux}-flake8]
commands =
    flake8 kelpickle tests
"""

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs  = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
pretty = true
show_traceback = true
raise_exceptions = true
exclude = "tests/*"
html_report = "./reports/mypy"
#junit_xml = "./reports/mypy.xml"