[metadata]
name = kelpickle
description = TODO: Add description
long_description = file: README.md
version = 0.0.1a
keywords = pickle, kelp, best effort
platforms = linux, win32
url = https://github.com/UltimateLobster/KelPickle
author = Nir Schulman
author_email = narsssx@gmail.com
maintainer = Nir Schulman
maintainer_email = narsssx@gmail.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
setup_requires =
    Cython

[options.extras_require]
dev =
    pytest
    pytest-cov
    mypy
    lxml
    flake8
    lxml
    tox

[options.package_data]
kelpickle = py.typed

[flake8]
max-line-length = 180
